person2 commited with 1 new monthly line chart

--- a/WingtraQBR/Report/sections/000_Page 1/visualContainers/00000_Amount by Week and Work At Risk/config.json
+++ b/WingtraQBR/Report/sections/000_Page 1/visualContainers/00000_Amount by Week and Work At Risk/config.json
@@ -138,6 +138,19 @@
             }
           }
         }
+      ],
+      "title": [
+        {
+          "properties": {
+            "text": {
+              "expr": {
+                "Literal": {
+                  "Value": "'Amount by Week and Work At Risk '"
+                }
+              }
+            }
+          }
+        }
       ]
     }
   }
