--- a/WingtraQBR/Report/sections/000_Page 1/visualContainers/03000_Amount by Month/config.json
+++ b/WingtraQBR/Report/sections/000_Page 1/visualContainers/03000_Amount by Month/config.json
@@ -5,11 +5,11 @@
       "id": 0,
       "position": {
         "x": 0,
-        "y": 349,
-        "width": 435,
-        "height": 339,
-        "z": 2002,
-        "tabOrder": 2002
+        "y": 0,
+        "z": 3000,
+        "width": 435.17826825127338,
+        "height": 338.60780984719867,
+        "tabOrder": 3000
       }
     }
   ],
